feat(resources): opensearch 관련 설정 및 키파일 추가
holiday

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,8 @@
-spring.application.name=opensearch
+spring:
+  application:
+    name: opensearch
+
+opensearch:
+  key-store:
+    path: classpath:opensearch/key.jks
+    password: in8282
