--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.opensearch.client:opensearch-java:2.8.1'
+	implementation 'org.apache.httpcomponents.client5:httpclient5'
+
 //	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
